<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomePage" >

    <TextView
        android:id="@+id/lblFY"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/FY"/>

    <Spinner
        android:id="@+id/spnFY"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btnIncomes"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/spnFY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Incomess"
        android:onClick="clickSetup"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnWithholdings"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnIncomes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Withhs"
        android:onClick="clickSetup"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnDeducs"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnWithholdings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Deducs"
        android:onClick="clickSetup"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnTxWDeducs"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnDeducs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/calculateTxWDeducs"
        android:onClick="clickSetup"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnTxDeducs"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnTxWDeducs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/calculateTxDeducs"
        android:onClick="clickSetup"
        android:textSize="15sp" />

    <ImageButton
        android:contentDescription="@string/usersettings"
        android:id="@+id/btnSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTxDeducs"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:onClick="clickSetup"
        android:src="@drawable/ic_settings" />

</RelativeLayout>
