<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddDeduction" >

    <TextView
        android:id="@+id/lblAddDeduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="43dp"
        android:text="@string/deductionType" />

    <Spinner
        android:id="@+id/spnDeducType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="37dp"
        android:layout_toRightOf="@+id/lblAddDeduct" />

    <TextView
        android:id="@+id/lblDeducAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAddDeduct"
        android:layout_below="@+id/spnDeducType"
        android:layout_marginTop="19dp"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/txtDeducAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblDeducAmount"
        android:layout_alignBottom="@+id/lblDeducAmount"
        android:layout_alignRight="@+id/spnDeducType"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblDeductDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDeducAmount"
        android:layout_below="@+id/txtDeducAmount"
        android:layout_marginTop="36dp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblDeductDate"
        android:layout_alignBottom="@+id/lblDeductDate"
        android:layout_alignLeft="@+id/txtDeducAmount"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/lblMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDeductDate"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="37dp"
        android:text="@string/months" />

    <NumberPicker
        android:id="@+id/numDeductPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/lblAddDeduct" />

    <TextView
        android:id="@+id/lblDeductComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblMonth"
        android:layout_below="@+id/numDeductPicker"
        android:layout_marginTop="25dp"
        android:text="@string/comments" />

    <EditText
        android:id="@+id/txtDeductComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblDeductComment"
        android:layout_toRightOf="@+id/lblAddDeduct"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="5"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:scrollHorizontally="false" />

</RelativeLayout>
